raftstore: refine raft log gc tick. (#10599)
* Remove `skip_gc_raft_log_ticks` and shorten tick interval.

Previously (before tikv#8668), trigger gc will force WAL sync in apply
thread, and use `skip_gc_raft_log_ticks` to reduce syncing. After
[tikv#8668](https://github.com/tikv/tikv/pull/8668), syncing is moved to
background worker thread, and `CompactLog` cmds are batched. So there is
no need to use `skip_gc_raft_log_ticks` anymore.

Signed-off-by: MrCroxx <mrcroxx@outlook.com>

* restore raft log gc tick interval and fix typo

restore raft log gc tick interval, it's better to seperate
default config modification from this pr.

Signed-off-by: MrCroxx <mrcroxx@outlook.com>

* remove raft log gc tick register whthin threshold.

Signed-off-by: MrCroxx <mrcroxx@outlook.com>

* remove tests for discarded config.

Signed-off-by: MrCroxx <mrcroxx@outlook.com>

* Hide `raft-log-gc-threshold` and set default value to 1.

This config is not needed after #8668, but some tests rely on it
to prevent log compaction.

Signed-off-by: MrCroxx <mrcroxx@outlook.com>

* fix typo

Co-authored-by: Xinye Tao <xy.tao@outlook.com>
Signed-off-by: MrCroxx <mrcroxx@outlook.com>

* Use optimized `raft_log_gc_tick_interval` config.

Signed-off-by: MrCroxx <mrcroxx@outlook.com>

* remove stale config `raft-log-reserve-max-ticks`

Signed-off-by: MrCroxx <mrcroxx@outlook.com>

* stop ticking raft log gc if role becomes follower

Signed-off-by: MrCroxx <mrcroxx@outlook.com>

* fix bug

eliminate follower raft gc tick will reduce some cpu usage
for ref #10540

Signed-off-by: MrCroxx <mrcroxx@outlook.com>

* update config items for async-io

- Restore config `raft-log-gc-threshold`.
- Make `raft-log-gc-batch-size` configurable.

Signed-off-by: MrCroxx <mrcroxx@outlook.com>

* remove raft gc tick batch, make compact interval configurable

Signed-off-by: MrCroxx <mrcroxx@outlook.com>

* restore raft-log-reserve-max-ticks

Signed-off-by: MrCroxx <mrcroxx@outlook.com>

* fix metrics

Signed-off-by: MrCr

--- a/etc/config-template.toml
+++ b/etc/config-template.toml
@@ -357,8 +357,11 @@
 ## When the number of Raft entries exceeds the max size, TiKV rejects to propose the entry.
 # raft-entry-max-size = "8MB"
 
+## Interval to compact unnecessary Raft log.
+# raft-log-compact-sync-interval = "2s"
+
 ## Interval to GC unnecessary Raft log.
-# raft-log-gc-tick-interval = "10s"
+# raft-log-gc-tick-interval = "3s"
 
 ## Threshold to GC stale Raft log, must be >= 1.
 # raft-log-gc-threshold = 50
@@ -369,6 +372,10 @@
 ## When the approximate size of Raft log entries exceeds this value, GC will be forced trigger.
 ## It's recommanded to set it to 3/4 of `region-split-size`.
 # raft-log-gc-size-limit = "72MB"
+
+## Old Raft logs could be reserved if `raft_log_gc_threshold` is not reached.
+## GC them after ticks `raft_log_reserve_max_ticks` times.
+# raft_log_reserve_max_ticks = 6
 
 ## Raft engine is a replaceable component. For some implementations, it's necessary to purge
 ## old log files to recycle disk space ASAP.
