--- a/components/kvengine/Cargo.toml
+++ b/components/kvengine/Cargo.toml
@@ -24,6 +24,7 @@ thiserror = "1.0"
 rand = "0.8"
 byteorder = "1.2"
 file_system = { path = "../file_system", default-features = false }
+libc = "0.2"
 futures = { version = "0.3", features = ["thread-pool"] }
 dashmap = "4.0"
 dyn-clone = "1.0"
