--- a/etc/config-template.toml
+++ b/etc/config-template.toml
@@ -47,11 +47,11 @@
 ## gain predictable stable performance.
 ## CPU quota for these front requests can use, default value is 0, it means unlimited.
 ## The unit is millicpu which 1000 means 1vCPU and this config is approximate.
-# forefront-cpu-time = 0
+# foreground-cpu-time = 0
 ## Write bandwidth limitation for this TiKV instance, default value is 0 which means unlimited.
-# write-bandwidth = "0B"
+# foreground-write-bandwidth = "0B"
 ## Read bandwidth limitation for this TiKV instance, default value is 0 which means unlimited
-# read-bandwidth = "0B"
+# foreground-read-bandwidth = "0B"
 
 [log]
 ## Log levels: debug, info, warn, error, fatal.
