--- a/etc/config-template.toml
+++ b/etc/config-template.toml
@@ -42,6 +42,17 @@
 ## to release memory.
 # memory-usage-limit = "0B"
 
+[quota]
+## Quota is use to add some limitation for the read write flow and then
+## gain predictable stable performance.
+## CPU quota for these front requests can use, default value is 0, it means unlimited.
+## The unit is millicpu which 1000 means 1vCPU and this config is approximate.
+# foreground-cpu-time = 0
+## Write bandwidth limitation for this TiKV instance, default value is 0 which means unlimited.
+# foreground-write-bandwidth = "0B"
+## Read bandwidth limitation for this TiKV instance, default value is 0 which means unlimited
+# foreground-read-bandwidth = "0B"
+
 [log]
 ## Log levels: debug, info, warn, error, fatal.
 ## Note that `debug` is only available in development builds.
