fix config and format
Signed-off-by: Little-Wallace <bupt2013211450@gmail.com>

--- a/etc/config-template.toml
+++ b/etc/config-template.toml
@@ -565,7 +565,7 @@
 # rate-limiter-auto-tuned = true
 
 ## Enable or disable the pipelined write.
-# enable-pipelined-write = true
+# enable-pipelined-write = false
 
 ## Allows OS to incrementally sync files to disk while they are being written, asynchronously,
 ## in the background.
