rocksdb: use new pipelined-write to replace multibatch-write (#12060)
close tikv/tikv#12059

Signed-off-by: Little-Wallace <bupt2013211450@gmail.com>

--- a/etc/config-template.toml
+++ b/etc/config-template.toml
@@ -575,8 +575,9 @@
 # rate-limiter-mode = "write-only"
 # rate-limiter-auto-tuned = true
 
-## Enable or disable the pipelined write.
-# enable-pipelined-write = true
+## Enable or disable the pipelined write. If set false, RocksDB will use a new write mode port from cockroachdb/pebble.
+## See more details in https://github.com/tikv/rocksdb/pull/267 and https://github.com/tikv/tikv/issues/12059.
+# enable-pipelined-write = false
 
 ## Allows OS to incrementally sync files to disk while they are being written, asynchronously,
 ## in the background.
