--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ failpoints = [
   "fail/failpoints",
   "raftstore/failpoints",
   "tikv_util/failpoints",
-  "engine_rocks/failpoints"
+  "engine_rocks/failpoints",
 ]
 cloud-aws = [
   "encryption_export/cloud-aws",
