--- a/etc/config-template.toml
+++ b/etc/config-template.toml
@@ -50,8 +50,10 @@
 # foreground-cpu-time = 0
 ## Write bandwidth limitation for this TiKV instance, default value is 0 which means unlimited.
 # foreground-write-bandwidth = "0B"
-## Read bandwidth limitation for this TiKV instance, default value is 0 which means unlimited
+## Read bandwidth limitation for this TiKV instance, default value is 0 which means unlimited.
 # foreground-read-bandwidth = "0B"
+## Limitation of max delay duration for each request, default value is 0 which means unlimited.
+# max-delay-duration = "500ms"
 
 [log]
 ## Log levels: debug, info, warn, error, fatal.
