--- a/components/causal_ts/Cargo.toml
+++ b/components/causal_ts/Cargo.toml
@@ -4,6 +4,18 @@ version = "0.0.1"
 edition = "2018"
 publish = false
 
+[features]
+tcmalloc = ["tikv/tcmalloc"]
+jemalloc = ["tikv/jemalloc"]
+mimalloc = ["tikv/mimalloc"]
+snmalloc = ["tikv/snmalloc"]
+portable = ["tikv/portable"]
+sse = ["tikv/sse"]
+mem-profiling = ["tikv/mem-profiling"]
+failpoints = ["tikv/failpoints"]
+test-engines-rocksdb = ["tikv/test-engines-rocksdb"]
+test-engines-panic = ["tikv/test-engines-panic"]
+
 [dependencies]
 api_version = { path = "../api_version" }
 collections = { path = "../collections" }
@@ -13,13 +25,16 @@ error_code = { path = "../error_code", default-features = false }
 fail = "0.5"
 futures = { version = "0.3" }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
+lazy_static = "1.3"
 parking_lot = "0.12"
 pd_client = { path = "../pd_client", default-features = false }
+prometheus = { version = "0.13", features = ["nightly"] }
 raftstore = { path = "../raftstore", default-features = false }
 raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
 slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
 slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
 thiserror = "1.0"
+tikv = { path = "../../", default-features = false }
 tikv_util = { path = "../tikv_util", default-features = false }
 txn_types = { path = "../txn_types", default-features = false }
 
