--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,7 +63,7 @@ async-trait = "0.1"
 backtrace = "0.3"
 batch-system = { path = "components/batch-system", default-features = false }
 byteorder = "1.2"
-causal_ts = { path = "components/causal_ts" }
+causal_ts = { path = "components/causal_ts", default-features = false }
 chrono = "0.4"
 codec = { path = "components/codec", default-features = false }
 concurrency_manager = { path = "components/concurrency_manager", default-features = false }
