--- a/components/causal_ts/Cargo.toml
+++ b/components/causal_ts/Cargo.toml
@@ -5,12 +5,10 @@ edition = "2018"
 publish = false
 
 [dependencies]
-api_version = { path = "../api_version" }
-collections = { path = "../collections" }
+api_version = { path = "../api_version", default-features = false }
 engine_rocks = { path = "../engine_rocks", default-features = false }
 engine_traits = { path = "../engine_traits", default-features = false }
 error_code = { path = "../error_code", default-features = false }
-fail = "0.5"
 futures = { version = "0.3" }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 lazy_static = "1.3"
@@ -27,7 +25,6 @@ txn_types = { path = "../txn_types", default-features = false }
 
 [dev-dependencies]
 test_raftstore = { path = "../test_raftstore", default-features = false }
-test_util = { path = "../test_util", default-features = false }
 
 [[test]]
 name = "integrations"
