--- a/components/backup/Cargo.toml
+++ b/components/backup/Cargo.toml
@@ -27,6 +27,7 @@ mem-profiling = ["tikv/mem-profiling"]
 failpoints = ["tikv/failpoints"]
 
 [dependencies]
+api_version = { path = "../api_version", default-features = false }
 concurrency_manager = { path = "../concurrency_manager", default-features = false }
 online_config = { path = "../online_config" }
 crc64fast = "0.1"
@@ -72,3 +73,4 @@ async-channel = "1.4"
 rand = "0.8"
 tempfile = "3.0"
 tokio = { version = "1.5", features = ["time", "macros"] }
+test_util = { path = "../test_util" }
