--- a/tests/integrations/config/test-custom.toml
+++ b/tests/integrations/config/test-custom.toml
@@ -216,6 +216,7 @@ renew-leader-lease-advance-duration = "456ms"
 reactive-memory-lock-tick-interval = "566ms"
 reactive-memory-lock-timeout-tick = 8
 report-min-resolved-ts-interval = "233ms"
+report-region-buckets-tick-interval = "1234s"
 
 [coprocessor]
 split-region-on-table = false
