--- a/components/kvengine/Cargo.toml
+++ b/components/kvengine/Cargo.toml
@@ -13,11 +13,6 @@ protobuf-codec = [
 
 [dependencies]
 async-trait = "0.1"
-aws-config = "0.3.0"
-aws-sdk-s3 = "0.3.0"
-aws-types = "0.3.0"
-aws-smithy-http = "0.33"
-aws-smithy-types = "0.33"
 bincode = "1.3"
 bytes = "1.0"
 thiserror = "1.0"
@@ -35,6 +30,9 @@ hyper = "0.14"
 moka = "0.5.1"
 farmhash = "1.1.5"
 kvenginepb = { path = "../kvenginepb", default-features = false }
+rusoto_core = "0.46.0"
+rusoto_credential = "0.46.0"
+rusoto_s3 = "0.46.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
 serde_json = "1.0"
