--- a/components/kvengine/Cargo.toml
+++ b/components/kvengine/Cargo.toml
@@ -34,7 +34,6 @@ http = "0.2"
 hyper = "0.14"
 moka = "0.5.1"
 farmhash = "1.1.5"
-crc32c = "0.6"
 kvenginepb = { path = "../kvenginepb", default-features = false }
 serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
@@ -48,6 +47,11 @@ tikv_util = { path = "../tikv_util", default-features = false}
 engine_traits = { path = "../engine_traits", default-features = false }
 txn_types = { path = "../txn_types", default-features = false }
 xorf = { version = "0.8", features = ["serde"] }
+
+[target.'cfg(target_os = "linux")'.dependencies]
+crc32fast = { version = "1.3", features = ["nightly"] }
+[target.'cfg(not(target_os = "linux"))'.dependencies]
+crc32fast = { version = "1.3" }
 
 [dev-dependencies]
 tempfile = "3"
