--- a/components/rfengine/Cargo.toml
+++ b/components/rfengine/Cargo.toml
@@ -17,10 +17,14 @@ protobuf = "2.8"
 kvproto = { git = "https://github.com/coocood/kvproto.git", rev = "128b6a780ee757fe66484bf324673abb4f868473" }
 raft = { version = "0.6.0-alpha", default-features = false }
 raft-proto = { version = "0.6.0-alpha", default-features = false }
-crc32c = "0.6"
 slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
 slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
 slog-term = "2.4"
 tempfile = "3.0"
 libc = "0.2"
 thiserror = "1.0"
+
+[target.'cfg(target_os = "linux")'.dependencies]
+crc32fast = { version = "1.3", features = ["nightly"] }
+[target.'cfg(not(target_os = "linux"))'.dependencies]
+crc32fast = { version = "1.3" }
