review comments address
Signed-off-by: qi.xu <tonxuqi@outlook.com>

--- a/tests/integrations/config/test-custom.toml
+++ b/tests/integrations/config/test-custom.toml
@@ -230,7 +230,7 @@ perf-level = 5
 enable-region-bucket = true 
 region-bucket-size = "1MB"
 region-size-threshold-for-approximate = "3MB"
-region-bucket-merge-size-ratio = "0.4"
+region-bucket-merge-size-ratio = 0.4
 
 [rocksdb]
 wal-recovery-mode = "absolute-consistency"
