--- a/components/kvengine/Cargo.toml
+++ b/components/kvengine/Cargo.toml
@@ -30,6 +30,9 @@ hyper = "0.14"
 moka = "0.5.1"
 farmhash = "1.1.5"
 kvenginepb = { path = "../kvenginepb", default-features = false }
+lazy_static = "1.3"
+prometheus = { version = "0.13", features = ["nightly"] }
+prometheus-static-metric = "0.5"
 rusoto_core = "0.46.0"
 rusoto_credential = "0.46.0"
 rusoto_s3 = "0.46.0"
