--- a/components/rfengine/Cargo.toml
+++ b/components/rfengine/Cargo.toml
@@ -15,12 +15,15 @@ engine_traits = { path = "../engine_traits", default-features = false }
 file_system = { path = "../file_system", default-features = false }
 protobuf = "2.8"
 kvproto = { git = "https://github.com/coocood/kvproto.git", rev = "128b6a780ee757fe66484bf324673abb4f868473" }
+prometheus = { version = "0.13", features = ["nightly"] }
+prometheus-static-metric = "0.5"
 raft = { version = "0.6.0-alpha", default-features = false }
 raft-proto = { version = "0.6.0-alpha", default-features = false }
 slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
 slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
 slog-term = "2.4"
 tempfile = "3.0"
+lazy_static = "1.3"
 libc = "0.2"
 thiserror = "1.0"
 
