br: support checkSum during stream restore dml kv-events (#35)
* support checksum in file level for br-stream

Signed-off-by: joccau <zak.zhao@pingcap.com>

* update kvproto package and maintain testcase.

Signed-off-by: joccau <zak.zhao@pingcap.com>

--- a/components/external_storage/Cargo.toml
+++ b/components/external_storage/Cargo.toml
@@ -43,6 +43,7 @@ tokio = { version = "1.5", features = ["time", "fs", "process"] }
 tokio-util = { version = "0.6", features = ["compat"] }
 url = "2.0"
 async-trait = "0.1"
+openssl = "0.10"
 
 [dev-dependencies]
 structopt = "0.3"
