--- a/components/sst_importer/Cargo.toml
+++ b/components/sst_importer/Cargo.toml
@@ -39,6 +39,7 @@ tikv_util = { path = "../tikv_util", default-features = false }
 tokio = { version = "1.5", features = ["time", "rt-multi-thread", "macros"] }
 txn_types = { path = "../txn_types", default-features = false }
 uuid = { version = "0.8.1", features = ["serde", "v4"] }
+openssl = "0.10"
 
 [dev-dependencies]
 tempfile = "3.0"
