rawkv: causal timestamp (#12099)
ref tikv/tikv#11965

* Add `causal_ts` component for causal timestamp generation & management.
* Implement causal timestamp provider from "batch" TSO from PD (see `causal_ts::BatchTsoProvider`).
* Append timestamp to keys of RawKV in `QueryObserver.pre_propose_query`.
* Setup causal timestamp observer when API V2 enabled (comment out)

Signed-off-by: pingyu <yuping@pingcap.com>
Signed-off-by: Andy Lok <andylokandy@hotmail.com>

Co-authored-by: Andy Lok <andylokandy@hotmail.com>
Co-authored-by: Ti Chi Robot <ti-community-prow-bot@tidb.io>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,7 @@ async-trait = "0.1"
 backtrace = "0.3"
 batch-system = { path = "components/batch-system", default-features = false }
 byteorder = "1.2"
+causal_ts = { path = "components/causal_ts" }
 chrono = "0.4"
 codec = { path = "components/codec", default-features = false }
 concurrency_manager = { path = "components/concurrency_manager", default-features = false }
@@ -263,6 +264,7 @@ members = [
   "components/test_coprocessor_plugin/example_plugin",
   "components/resource_metering",
   "components/api_version",
+  "components/causal_ts",
 ]
 default-members = ["cmd/tikv-server", "cmd/tikv-ctl"]
 
