--- a/components/server/Cargo.toml
+++ b/components/server/Cargo.toml
@@ -30,6 +30,7 @@ backup = { path = "../backup", default-features = false }
 cdc = { path = "../cdc", default-features = false }
 chrono = "0.4"
 tempfile = "3.0"
+causal_ts = { path = "../causal_ts" }
 clap = "2.32"
 collections = { path = "../collections" }
 concurrency_manager = { path = "../concurrency_manager", default-features = false }
