add except exec_ctx
Signed-off-by: CalvinNeo <calvinneo1995@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,9 @@ test-engines-rocksdb = [
 test-engines-panic = [
   "engine_test/test-engines-panic",
 ]
+bcc-iosnoop = [
+  "file_system/bcc-iosnoop",
+]
 cloud-storage-grpc = ["sst_importer/cloud-storage-grpc"]
 cloud-storage-dylib = ["sst_importer/cloud-storage-dylib"]
 
