--- a/etc/config-template.toml
+++ b/etc/config-template.toml
@@ -937,7 +937,7 @@
 [raft-engine]
 ## Determines whether to use Raft Engine to store raft logs. When it is
 ## enabled, configurations of `raftdb` are ignored.
-# enable = true
+# enable = false
 
 ## The directory at which raft log files are stored. If the directory does not
 ## exist, it will be created when TiKV is started.
