--- a/components/kvengine/Cargo.toml
+++ b/components/kvengine/Cargo.toml
@@ -28,6 +28,7 @@ hex = "0.4"
 http = "0.2"
 hyper = "0.14"
 moka = "0.5.1"
+num_cpus = "1"
 farmhash = "1.1.5"
 kvenginepb = { path = "../kvenginepb", default-features = false }
 lazy_static = "1.3"
