--- a/Cargo.toml
+++ b/Cargo.toml
@@ -162,7 +162,7 @@ resource_metering = { path = "components/resource_metering" }
 seahash = "4.1.0"
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
-pprof = { path = "/home/yangkeao/Project/github.com/YangKeao/pprof-rs", default-features = false, features = ["flamegraph", "frame-pointer", "protobuf-codec"] }
+pprof = { git = "https://github.com/YangKeao/pprof-rs.git", branch = "frame-pointer" , default-features = false, features = ["flamegraph", "frame-pointer", "protobuf-codec"] }
 
 [dev-dependencies]
 example_plugin = { path = "components/test_coprocessor_plugin/example_plugin" } # should be a binary dependency
@@ -180,7 +180,7 @@ raft = { git = "https://github.com/tikv/raft-rs", branch = "master" }
 raft-proto = { git = "https://github.com/tikv/raft-rs", branch = "master" }
 protobuf = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }
 protobuf-codegen = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }
-pprof = { path = "/home/yangkeao/Project/github.com/YangKeao/pprof-rs" }
+pprof = { git = "https://github.com/YangKeao/pprof-rs.git", branch = "frame-pointer" }
 
 # TODO: remove this replacement after rusoto_s3 truly supports virtual-host style (https://github.com/rusoto/rusoto/pull/1823).
 rusoto_core = { git = "https://github.com/tikv/rusoto", branch = "gh1482-s3-addr-styles" }
