--- a/components/kvengine/Cargo.toml
+++ b/components/kvengine/Cargo.toml
@@ -20,6 +20,7 @@ rand = "0.8"
 byteorder = "1.2"
 file_system = { path = "../file_system", default-features = false }
 libc = "0.2"
+lz4 = "1.23.1"
 futures = { version = "0.3", features = ["thread-pool"] }
 dashmap = "4.0"
 dyn-clone = "1.0"
@@ -49,6 +50,7 @@ tikv_util = { path = "../tikv_util", default-features = false}
 engine_traits = { path = "../engine_traits", default-features = false }
 txn_types = { path = "../txn_types", default-features = false }
 xorf = { version = "0.8", features = ["serde"] }
+zstd-sys = "1.6.3+zstd.1.5.2"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 crc32fast = { version = "1.3", features = ["nightly"] }
