--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,7 +84,7 @@ futures = { version = "0.3", features = ["thread-pool", "compat"] }
 futures-executor = "0.3.1"
 futures-timer = "3.0"
 futures-util = { version = "0.3.1", default-features = false, features = ["io", "async-await"] }
-grpcio = { version = "0.10",  default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
+grpcio = { version = "0.10",  default-features = false, features = ["no-omit-frame-pointer", "openssl-vendored", "protobuf-codec"] }
 grpcio-health = { version = "0.10", default-features = false, features = ["protobuf-codec"] }
 hex = "0.4"
 hyper-tls = "0.5"
@@ -162,7 +162,7 @@ resource_metering = { path = "components/resource_metering" }
 seahash = "4.1.0"
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
-pprof = { version = "^0.6", default-features = false, features = ["flamegraph", "protobuf-codec"] }
+pprof = { path = "/home/yangkeao/Project/github.com/YangKeao/pprof-rs", default-features = false, features = ["flamegraph", "frame-pointer", "protobuf-codec"] }
 
 [dev-dependencies]
 example_plugin = { path = "components/test_coprocessor_plugin/example_plugin" } # should be a binary dependency
@@ -180,7 +180,7 @@ raft = { git = "https://github.com/tikv/raft-rs", branch = "master" }
 raft-proto = { git = "https://github.com/tikv/raft-rs", branch = "master" }
 protobuf = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }
 protobuf-codegen = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }
-pprof = { git = "https://github.com/tikv/pprof-rs.git" }
+pprof = { path = "/home/yangkeao/Project/github.com/YangKeao/pprof-rs" }
 
 # TODO: remove this replacement after rusoto_s3 truly supports virtual-host style (https://github.com/rusoto/rusoto/pull/1823).
 rusoto_core = { git = "https://github.com/tikv/rusoto", branch = "gh1482-s3-addr-styles" }
