fix build on macOS

--- a/components/engine_rocks/Cargo.toml
+++ b/components/engine_rocks/Cargo.toml
@@ -51,6 +51,7 @@ case_macros = { path = "../case_macros" }
 
 [dependencies.rocksdb]
 git = "https://github.com/tikv/rust-rocksdb.git"
+rev = "e97c9b50d388ac00aae538afcdbb6224a2b12fda"
 package = "rocksdb"
 features = ["encryption", "static_libcpp"]
 
