--- a/components/test_backup/Cargo.toml
+++ b/components/test_backup/Cargo.toml
@@ -30,3 +30,4 @@ tidb_query_common = { path = "../tidb_query_common" }
 tikv = { path = "../../", default-features = false }
 tikv_util = { path = "../tikv_util", default-features = false }
 txn_types = { path = "../txn_types", default-features = false }
+protobuf = "2"
