--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ cloud-azure = [
   "encryption_export/cloud-azure",
   "sst_importer/cloud-azure",
 ]
-testexport = ["raftstore/testexport"]
+testexport = ["raftstore/testexport", "api_version/testexport"]
 test-engines-rocksdb = [
   "engine_test/test-engines-rocksdb",
 ]
