--- a/Cargo.toml
+++ b/Cargo.toml
@@ -181,6 +181,7 @@ raft-proto = { git = "https://github.com/tikv/raft-rs", branch = "master" }
 protobuf = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }
 protobuf-codegen = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }
 pprof = { git = "https://github.com/tikv/pprof-rs.git" }
+grpcio = { git = "https://github.com/glorv/grpc-rs", branch = "mem-quota" }
 
 # TODO: remove this replacement after rusoto_s3 truly supports virtual-host style (https://github.com/rusoto/rusoto/pull/1823).
 rusoto_core = { git = "https://github.com/tikv/rusoto", branch = "gh1482-s3-addr-styles" }
