--- a/components/test_backup/Cargo.toml
+++ b/components/test_backup/Cargo.toml
@@ -31,3 +31,4 @@ tikv = { path = "../../", default-features = false }
 tikv_util = { path = "../tikv_util", default-features = false }
 txn_types = { path = "../txn_types", default-features = false }
 protobuf = "2"
+api_version = { path = "../api_version" }
