--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,6 +80,7 @@ engine_traits_tests = { path = "components/engine_traits_tests", default-feature
 error_code = { path = "components/error_code", default-features = false }
 fail = "0.5"
 file_system = { path = "components/file_system", default-features = false }
+flate2 = "1.0"
 futures = { version = "0.3", features = ["thread-pool", "compat"] }
 futures-executor = "0.3.1"
 futures-timer = "3.0"
@@ -173,6 +174,7 @@ test_util = { path = "components/test_util", default-features = false }
 tokio = { version = "1.17", features = ["macros", "rt-multi-thread", "time"] }
 zipf = "6.1.0"
 hyper-openssl = "0.9"
+bytes = "1.0"
 
 [patch.crates-io]
 # TODO: remove this when new raft-rs is published.
