--- a/components/test_storage/Cargo.toml
+++ b/components/test_storage/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2018"
 publish = false
 
 [features]
-default = ["test-engine-kv-rocksdb", "test-engine-raft-raft-engine"]
+default = ["test-engines-rocksdb"]
 
 test-engine-kv-rocksdb = [
   "test_raftstore/test-engine-kv-rocksdb"
