--- a/components/cdc/Cargo.toml
+++ b/components/cdc/Cargo.toml
@@ -56,6 +56,7 @@ prometheus-static-metric = "0.5"
 protobuf = { version = "2.8", features = ["bytes"] }
 futures-timer = "3.0"
 api_version = { path = "../api_version" }
+causal_ts = { path = "../causal_ts" }
 
 [dev-dependencies]
 engine_rocks = { path = "../engine_rocks", default-features = false }
