--- a/components/engine_rocks_helper/Cargo.toml
+++ b/components/engine_rocks_helper/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2018"
 publish = false
 
+[features]
+failpoints = ["fail/failpoints"]
+
 [dependencies]
 pd_client = { path = "../pd_client", default-features = false }
 keys = { path = "../keys", default-features = false }
@@ -14,6 +17,7 @@ kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = f
 protobuf = "2.8"
 futures = "0.3"
 tempfile = "3.0"
+fail = "0.5"
 
 [dev-dependencies]
 engine_test = { path = "../engine_test" }
