Revert "default use rocksdb"
This reverts commit abe37a963f2b0dfeac87ba334ab7ae63fdec6e9f.

Signed-off-by: tabokie <xy.tao@outlook.com>

--- a/components/engine_test/Cargo.toml
+++ b/components/engine_test/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 publish = false
 
 [features]
-default = ["test-engines-rocksdb"]
+default = ["test-engine-kv-rocksdb", "test-engine-raft-raft-engine"]
 
 test-engine-kv-panic = []
 test-engine-kv-rocksdb = []
