--- a/Cargo.toml
+++ b/Cargo.toml
@@ -176,8 +176,10 @@ hyper-openssl = "0.9"
 
 [patch.crates-io]
 # TODO: remove this when new raft-rs is published.
-raft = { git = "https://github.com/tikv/raft-rs", branch = "master" }
-raft-proto = { git = "https://github.com/tikv/raft-rs", branch = "master" }
+#raft = { git = "https://github.com/tikv/raft-rs", branch = "master" }
+#raft-proto = { git = "https://github.com/tikv/raft-rs", branch = "master" }
+raft = { git = "https://github.com/tier-cap/raft-rs.git", branch = "fix-log-append-reject-bug" }
+raft-proto = { git = "https://github.com/tier-cap/raft-rs.git", branch = "fix-log-append-reject-bug" }
 protobuf = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }
 protobuf-codegen = { git = "https://github.com/pingcap/rust-protobuf", branch = "v2.8" }
 pprof = { git = "https://github.com/tikv/pprof-rs.git" }
