This commit was sequashed by the following PRs from the feature branch `br-stream`:
- backup-stream: update kvproto to master [by @3pointer] (https://github.com/3pointer/tikv/pull/48)

- Added retry for initial scanning and some metrics [by @YuJuncen] (https://github.com/3pointer/tikv/pull/47)

- Added a new observer type 'pitr' [by @YuJuncen] (https://github.com/3pointer/tikv/pull/46)

- backup-stream: fix some bugs in log backup [by @3pointer] (https://github.com/3pointer/tikv/pull/45)

- Refactor resolver [by @YuJuncen] (https://github.com/3pointer/tikv/pull/44)

- report error to PD server [by @YuJuncen] (https://github.com/3pointer/tikv/pull/43)

- br: support pause/resume stream task [by @joccau] (https://github.com/3pointer/tikv/pull/42)

- Adapt error code for `endpoint::Error` and implement the contextual error [by @YuJuncen] (https://github.com/3pointer/tikv/pull/41)

- set uuid for header to prevent raftstore merging [by @YuJuncen] (https://github.com/3pointer/tikv/pull/40)

- fix the upload part of S3 storage [by @YuJuncen] (https://github.com/3pointer/tikv/pull/39)

- Use min ts of mem lock [by @YuJuncen] (https://github.com/3pointer/tikv/pull/38)

- Fix size leakage and build [by @YuJuncen] (https://github.com/3pointer/tikv/pull/37)

- eliminate the block call in ticker [by @YuJuncen] (https://github.com/3pointer/tikv/pull/36)

- br: support checkSum during stream restore dml kv-events [by @joccau] (https://github.com/3pointer/tikv/pull/35)

- refine br-stream to backup-stream [by @3pointer] (https://github.com/3pointer/tikv/pull/34)

- Allow local storage support directory and partition the log files by table [by @YuJuncen] (https://github.com/3pointer/tikv/pull/33)

- br-stream: added store error to the store [by @YuJuncen] (https://github.com/3pointer/tikv/pull/32)

- Scan on Leader Change [by @YuJuncen] (https://github.com/3pointer/tikv/pull/31)

- use local thread pool for downloading [by @YuJuncen] (https://github.com/3pointer/tikv/pull/30)

- di

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ failpoints = [
   "fail/failpoints",
   "raftstore/failpoints",
   "tikv_util/failpoints",
-  "engine_rocks/failpoints"
+  "engine_rocks/failpoints",
 ]
 cloud-aws = [
   "encryption_export/cloud-aws",
@@ -259,6 +259,7 @@ members = [
   "components/error_code",
   "components/concurrency_manager",
   "components/server",
+  "components/backup-stream",
   "components/file_system",
   "components/collections",
   "components/coprocessor_plugin_api",
