--- a/components/server/Cargo.toml
+++ b/components/server/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 publish = false
 
 [features]
+default = ["test-engines-rocksdb"]
 tcmalloc = ["tikv/tcmalloc"]
 jemalloc = ["tikv/jemalloc"]
 mimalloc = ["tikv/mimalloc"]
@@ -24,10 +25,12 @@ test-engines-panic = [
   "tikv/test-engines-panic",
 ]
 nortcheck = ["engine_rocks/nortcheck"]
+backup-stream-debug = ["backup-stream/backup-stream-debug"]
 
 [dependencies]
 api_version = { path = "../api_version" }
 backup = { path = "../backup", default-features = false }
+backup-stream = { path = "../backup-stream", default-features = false }
 cdc = { path = "../cdc", default-features = false }
 chrono = "0.4"
 tempfile = "3.0"
