--- a/etc/config-template.toml
+++ b/etc/config-template.toml
@@ -989,6 +989,10 @@
 ## Default: 4. Minimum: 1.
 # recovery-threads = 4
 
+## Memory usage limit for Raft Engine.
+## When it's not set, 15% of available system memory will be used.
+# memory-limit = "1GB"
+
 [security]
 ## The path for TLS certificates. Empty string means disabling secure connections.
 # ca-path = ""
