--- a/components/api_version/Cargo.toml
+++ b/components/api_version/Cargo.toml
@@ -10,7 +10,7 @@ testexport = []
 [dependencies]
 bitflags = "1.0.1"
 codec = { path = "../codec", default-features = false }
-kvproto = { git = "https://github.com/coocood/kvproto.git", branch = "cloud-native" }
+kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 thiserror = "1.0"
 tikv_util = { path = "../tikv_util", default-features = false }
 engine_traits = { path = "../engine_traits", default-features = false }
