--- a/components/cloud_server/Cargo.toml
+++ b/components/cloud_server/Cargo.toml
@@ -51,7 +51,7 @@ grpcio-health = { version = "0.10", default-features = false, features = ["proto
 hex = "0.4"
 hyper = { version = "0.14", features = ["full"] }
 keys = { path = "../keys", default-features = false }
-kvproto = { git = "https://github.com/coocood/kvproto.git", branch = "cloud-native" }
+kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 kvengine = { path = "../kvengine", default-features = false }
 lazy_static = "1.3"
 libc = "0.2"
