--- a/components/raft_log_engine/Cargo.toml
+++ b/components/raft_log_engine/Cargo.toml
@@ -17,7 +17,7 @@ time = "0.1"
 online_config = { path = "../online_config" }
 serde = "1.0"
 serde_derive = "1.0"
-kvproto = { git = "https://github.com/coocood/kvproto.git", branch = "cloud-native" }
+kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
 raft-engine = "0.1.0"
 protobuf = "2"
