--- a/components/rfengine/Cargo.toml
+++ b/components/rfengine/Cargo.toml
@@ -14,7 +14,7 @@ error_code = { path = "../error_code", default-features = false }
 engine_traits = { path = "../engine_traits", default-features = false }
 file_system = { path = "../file_system", default-features = false }
 protobuf = "2.8"
-kvproto = { git = "https://github.com/coocood/kvproto.git", branch = "cloud-native" }
+kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 prometheus = { version = "0.13", features = ["nightly"] }
 prometheus-static-metric = "0.5"
 raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"]}
