--- a/components/server/Cargo.toml
+++ b/components/server/Cargo.toml
@@ -49,7 +49,7 @@ grpcio = { version = "0.10", default-features = false, features = ["openssl-vend
 grpcio-health = { version = "0.10", default-features = false, features = ["protobuf-codec"] }
 hex = "0.4"
 keys = { path = "../keys", default-features = false }
-kvproto = { git = "https://github.com/coocood/kvproto.git", branch = "cloud-native" }
+kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 libc = "0.2"
 log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
 log_wrappers = { path = "../log_wrappers" }
