--- a/components/test_storage/Cargo.toml
+++ b/components/test_storage/Cargo.toml
@@ -16,7 +16,7 @@ test-engines-panic = [
 [dependencies]
 api_version = { path = "../api_version" }
 futures = "0.3"
-kvproto = { git = "https://github.com/coocood/kvproto.git", branch = "cloud-native" }
+kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 raftstore = { path = "../raftstore", default-features = false }
 pd_client = { path = "../pd_client", default-features = false }
 test_raftstore = { path = "../test_raftstore", default-features = false }
