add build-std to cargo config
Signed-off-by: YangKeao <yangkeao@chunibyo.icu>

--- a/etc/cargo.config.dist
+++ b/etc/cargo.config.dist
@@ -5,6 +5,9 @@
 [build]
 rustflags = ["-Cforce-frame-pointers=yes"]
 
+[unstable]
+build-std = true
+
 [profile.release]
 opt-level = 3
 debug = true
