fix build-std unstable feature
Signed-off-by: YangKeao <yangkeao@chunibyo.icu>

--- a/etc/cargo.config.dist
+++ b/etc/cargo.config.dist
@@ -6,7 +6,7 @@
 rustflags = ["-Cforce-frame-pointers=yes"]
 
 [unstable]
-build-std = true
+build-std = ["core", "std", "alloc", "proc_macro"]
 
 [profile.release]
 opt-level = 3
