components, etc, src: detect auto analyze at tikv side
Signed-off-by: BornChanger <dawn_catcher@126.com>

--- a/etc/config-template.toml
+++ b/etc/config-template.toml
@@ -54,6 +54,8 @@
 # foreground-read-bandwidth = "0B"
 ## Limitation of max delay duration for each request, default value is 0 which means unlimited.
 # max-delay-duration = "500ms"
+## If quota auto tune is supported
+# support-auto-tune = false
 
 [log]
 ## Log levels: debug, info, warn, error, fatal.
