add options for new features
Signed-off-by: tabokie <xy.tao@outlook.com>

--- a/cmd/tikv-server/Cargo.toml
+++ b/cmd/tikv-server/Cargo.toml
@@ -26,6 +26,9 @@ test-engine-raft-raft-engine = [
 test-engines-rocksdb = ["server/test-engines-rocksdb"]
 test-engines-panic = ["server/test-engines-panic"]
 
+optimize-rocks-read = ["server/optimize-rocks-read"]
+optimize-rocks-write = ["server/optimize-rocks-write"]
+
 nortcheck = ["server/nortcheck"]
 
 [dependencies]
