--- a/tests/integrations/config/test-custom.toml
+++ b/tests/integrations/config/test-custom.toml
@@ -319,6 +319,9 @@ enable-doubly-skiplist = false
 enable-compaction-guard = false
 compaction-guard-min-output-file-size = "12MB"
 compaction-guard-max-output-file-size = "34MB"
+prepopulate-block-cache = true
+format-version = 5
+checksum = "xxh3"
 
 [rocksdb.defaultcf.titan]
 min-blob-size = "2018B"
@@ -380,6 +383,9 @@ prop-keys-index-distance = 40000
 enable-compaction-guard = false
 compaction-guard-min-output-file-size = "12MB"
 compaction-guard-max-output-file-size = "34MB"
+prepopulate-block-cache = true
+format-version = 5
+checksum = "xxh3"
 
 [rocksdb.lockcf]
 block-size = "12KB"
@@ -426,6 +432,9 @@ prop-keys-index-distance = 40000
 enable-compaction-guard = true
 compaction-guard-min-output-file-size = "12MB"
 compaction-guard-max-output-file-size = "34MB"
+prepopulate-block-cache = true
+format-version = 5
+checksum = "xxh3"
 
 [rocksdb.raftcf]
 block-size = "12KB"
@@ -472,6 +481,9 @@ prop-keys-index-distance = 40000
 enable-compaction-guard = true
 compaction-guard-min-output-file-size = "12MB"
 compaction-guard-max-output-file-size = "34MB"
+prepopulate-block-cache = true
+format-version = 5
+checksum = "xxh3"
 
 [raftdb]
 wal-recovery-mode = "skip-any-corrupted-records"
@@ -551,6 +563,9 @@ prop-keys-index-distance = 40000
 enable-compaction-guard = true
 compaction-guard-min-output-file-size = "12MB"
 compaction-guard-max-output-file-size = "34MB"
+prepopulate-block-cache = true
+format-version = 5
+checksum = "xxh3"
 
 [raftdb.defaultcf.titan]
 min-blob-size = "2018B"
